# platform.core.uifw.tts-engine-default

./: AUTHORS  CMakeLists.txt  NOTICE  org.tizen.tts-engine-default-info.xml  org.tizen.tts-engine-default-setting.xml  org.tizen.tts-engine-default.xml  project.config
data/po/ar/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/az/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/bg/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/bn/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/ca/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/cs/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/da/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/de/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/el_GR/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/en/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/en_PH/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/es_ES/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/es_US/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/et/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/eu/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/fa/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/fi/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/fr/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/fr_CA/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/ga/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/gl/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/gu/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/he/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/hi/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/hr/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/hu/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/hy/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/is/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/it_IT/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/ja_JP/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/ka/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/kk/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/kn/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/po/ko_KR/LC_MESSAGES/: org.tizen.tts-engine-default-setting.mo
data/smt_vdata/: smt_es_ES.lng  smt_it_IT_f00.cfg  smt_ko_KR_f00.cfg
packaging/: org.tizen.tts-engine-default.manifest  org.tizen.tts-engine-default.spec
(+25 files in other folders)
