CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(org.tizen.tts-engine-default C)

SET(VERSION 0.0.1)
FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
IF("${ARCH}" MATCHES "^arm.*")
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/armv7l/libsmt.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/armv7l/org.tizen.tts-engine-default DESTINATION ${APP_INSTALL_PREFIX}/bin/)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/armv7l/org.tizen.tts-engine-default-setting DESTINATION ${APP_INSTALL_PREFIX}/bin/)
ELSEIF("${ARCH}" MATCHES "^i586.*")
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/i586/libsmt.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/i586/org.tizen.tts-engine-default DESTINATION ${APP_INSTALL_PREFIX}/bin/)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/i586/org.tizen.tts-engine-default-setting DESTINATION ${APP_INSTALL_PREFIX}/bin/)
ELSEIF("${ARCH}" MATCHES "^i686.*")
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/i586/libsmt.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/i586/org.tizen.tts-engine-default DESTINATION ${APP_INSTALL_PREFIX}/bin/)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/i586/org.tizen.tts-engine-default-setting DESTINATION ${APP_INSTALL_PREFIX}/bin/)
ELSEIF("${ARCH}" MATCHES "^aarch64.*")
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/aarch64/libsmt.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/aarch64/org.tizen.tts-engine-default DESTINATION ${APP_INSTALL_PREFIX}/bin/)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/aarch64/org.tizen.tts-engine-default-setting DESTINATION ${APP_INSTALL_PREFIX}/bin/)
ELSEIF("${ARCH}" MATCHES "^x86_64.*")
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/x86_64/libsmt.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/x86_64/org.tizen.tts-engine-default DESTINATION ${APP_INSTALL_PREFIX}/bin/)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/x86_64/org.tizen.tts-engine-default-setting DESTINATION ${APP_INSTALL_PREFIX}/bin/)
ENDIF()

INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/data/smt_vdata/ DESTINATION ${TZ_SYS_RO_SHARE}/voice/tts/smt_vdata)
INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/data/po/ DESTINATION ${APP_INSTALL_PREFIX}-setting/res/locale)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/org.tizen.tts-engine-default-info.xml DESTINATION ${TZ_SYS_RO_SHARE}/voice/tts/1.0/engine-info/)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/org.tizen.tts-engine-default.xml DESTINATION ${APP_MANIFESTDIR})

